--- a/hotel/src/main/resources/application.properties
+++ b/hotel/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8089
 # usuário e senha de conexão com o banco de dados
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=edubaln901
 # url de conexão do banco de dados
 spring.datasource.url=jdbc:mysql://localhost:3306/hotel?allowPublicKeyRetrieval=true&rewriteBatchedStatements=true&useSSL=false&useUnicode=yes&characterEncoding=UTF-8&useLegacyDatetimeCode=true&createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=UTC
  
@@ -17,3 +17,13 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.protocol=smtp
+spring.mail.username=hotelfloripasenac@gmail.com
+spring.mail.password=upiwktxqvpmnnbuk
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.quitwait=false 
