--- a/hotel/src/main/resources/application.properties
+++ b/hotel/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8089
 # usuário e senha de conexão com o banco de dados
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=edubaln901
 # url de conexão do banco de dados
 spring.datasource.url=jdbc:mysql://localhost:3306/hotel?allowPublicKeyRetrieval=true&rewriteBatchedStatements=true&useSSL=false&useUnicode=yes&characterEncoding=UTF-8&useLegacyDatetimeCode=true&createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=UTC
  
