reserva controller, reserva.js, inicio logica crud reserva

--- a/hotel/src/main/resources/application.properties
+++ b/hotel/src/main/resources/application.properties
@@ -27,3 +27,7 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.quitwait=false 
+
+# spring.datasource.platform=mylocalmysql
+# spring.datasource.initialization-mode=always
+# spring.datasource.data=data-mysql.sql
